--- a/login.html
+++ b/login.html
@@ -4,31 +4,48 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Inacap - Login</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <style>body{font-family:'Inter',sans-serif}</style>
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            background-color: var(--bs-gray-100);
+        }
+    </style>
 </head>
-<body class="bg-slate-200 min-h-screen flex items-center justify-center">
-    <div class="w-full max-w-md p-8 space-y-6 bg-white rounded-xl shadow-lg">
-        <div class="text-center">
-            <h1 class="text-3xl font-bold text-slate-900">Bienvenido!</h1>
-            <p class="text-slate-500">Inicia sesión para continuar.</p>
+<body>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-6 col-lg-5 col-xl-4">
+                <div class="card shadow-lg border-0">
+                    <div class="card-body p-4 p-lg-5">
+                        <div class="text-center mb-4">
+                            <h1 class="h3 fw-bold">Bienvenido!</h1>
+                            <p class="text-secondary">Inicia sesión para continuar.</p>
+                        </div>
+                        <form id="login-form" action="index.html" method="get">
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Correo</label>
+                                <input type="email" class="form-control" id="email" name="email" required 
+                                    placeholder="nombre.apellido@inacapmail.com">
+                            </div>
+                            <div class="mb-4">
+                                <label for="password" class="form-label">Contraseña</label>
+                                <input type="password" class="form-control" id="password" name="password" required 
+                                    placeholder="••••••••">
+                            </div>
+                            <button type="submit" class="btn btn-danger w-100 py-2">Iniciar Sesión</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
-        <form id="login-form" class="space-y-6" action="index.html" method="get">
-            <div>
-                <label for="email" class="block text-sm font-medium text-slate-700">Correo</label>
-                <input type="email" id="email" name="email" required class="w-full px-4 py-2 mt-2 border rounded-lg" placeholder="nombre.apellido@inacapmail.com">
-            </div>
-            <div>
-                <label for="password" class="block text-sm font-medium text-slate-700">Contraseña</label>
-                <input type="password" id="password" name="password" required class="w-full px-4 py-2 mt-2 border rounded-lg" placeholder="••••••••">
-            </div>
-            <div>
-                <button type="submit" class="w-full px-4 py-3 font-semibold text-white bg-red-600 rounded-lg">Iniciar Sesión</button>
-            </div>
-        </form>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="scripts/app.js"></script>
 </body>
 </html>
