--- a/profile.html
+++ b/profile.html
@@ -4,63 +4,77 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Inacap - Perfil</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>body{font-family:'Inter',sans-serif}</style>
 </head>
-<body class="bg-slate-100 text-slate-800">
-    <div class="flex h-screen bg-slate-50">
+<body class="bg-light">
+    <div class="d-flex vh-100">
         <!-- Sidebar placeholder: partial will be injected here -->
         <div id="sidebar"></div>
  
-         <!-- Profile main -->
-         <main class="flex-1 p-6 lg:p-8 overflow-y-auto">
-            <h2 class="text-3xl font-bold mb-4">Mi Perfil</h2>
-            <div class="bg-white p-6 rounded-lg shadow-md grid grid-cols-1 md:grid-cols-3 gap-6">
-                <div class="flex flex-col items-center md:col-span-1">
-                    <img id="profile-pic-preview" src="Pictures/profile.png" class="w-32 h-32 rounded-full border object-cover" alt="avatar">
-                    <input id="profile-pic-input" type="file" accept="image/*" class="hidden">
-                    <div class="mt-3 flex space-x-2">
-                        <button id="edit-picture" class="px-3 py-1 bg-blue-600 text-white rounded-lg">Editar foto</button>
-                        <button id="remove-photo" class="px-3 py-1 text-red-600">Remover</button>
-                    </div>
-                </div>
-
-                <div class="md:col-span-2 space-y-4">
-                    <div class="flex items-center justify-between border-b pb-3">
-                        <div class="w-full">
-                            <label class="block text-sm font-medium">Contraseña</label>
-                            <span id="display-password" class="text-slate-600">••••••••</span>
-                            <div id="edit-password-area" class="mt-2 hidden space-y-2">
-                                <input id="current-password" type="password" placeholder="Contraseña actual" class="w-full px-3 py-2 border rounded-lg" />
-                                <input id="new-password" type="password" placeholder="Nueva contraseña" class="w-full px-3 py-2 border rounded-lg" />
+        <!-- Profile main -->
+        <div class="flex-grow-1 d-flex flex-column">
+            <!-- Header placeholder -->
+            <div id="header"></div>
+            
+            <main class="flex-grow-1 p-4 p-lg-5 overflow-auto">
+                <h2 class="display-6 fw-bold mb-4">Mi Perfil</h2>
+                <div class="bg-white p-4 rounded shadow">
+                    <div class="row g-4">
+                        <div class="col-md-4 text-center">
+                            <img id="profile-pic-preview" src="Pictures/profile.png" class="rounded-circle border" alt="avatar" style="width: 128px; height: 128px; object-fit: cover;">
+                            <input id="profile-pic-input" type="file" accept="image/*" class="d-none">
+                            <div class="mt-3">
+                                <button id="edit-picture" class="btn btn-primary btn-sm me-2">Editar foto</button>
+                                <button id="remove-photo" class="btn btn-link btn-sm text-danger">Remover</button>
                             </div>
                         </div>
-                        <div><button data-field="password" class="edit-btn px-3 py-1 bg-blue-600 text-white rounded-lg">Editar</button></div>
-                    </div>
 
-                    <div class="flex items-center justify-between border-b pb-3">
-                        <div class="w-full">
-                            <label class="block text-sm font-medium">Fecha de nacimiento</label>
-                            <span id="display-birthday" class="text-slate-600">No especificada</span>
-                            <input id="input-birthday" type="date" class="mt-2 hidden w-full px-3 py-2 border rounded-lg" />
-                        </div>
-                        <div><button data-field="birthday" class="edit-btn px-3 py-1 bg-blue-600 text-white rounded-lg">Editar</button></div>
-                    </div>
+                        <div class="col-md-8">
+                            <div class="mb-4 pb-3 border-bottom">
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="flex-grow-1">
+                                        <label class="form-label small fw-medium">Contraseña</label>
+                                        <span id="display-password" class="text-secondary">••••••••</span>
+                                        <div id="edit-password-area" class="mt-2 d-none">
+                                            <input id="current-password" type="password" placeholder="Contraseña actual" class="form-control mb-2">
+                                            <input id="new-password" type="password" placeholder="Nueva contraseña" class="form-control">
+                                        </div>
+                                    </div>
+                                    <button data-field="password" class="edit-btn btn btn-primary btn-sm">Editar</button>
+                                </div>
+                            </div>
 
-                    <div class="flex items-center justify-between">
-                        <div class="w-full">
-                            <label class="block text-sm font-medium">Dirección</label>
-                            <span id="display-address" class="text-slate-600">Calle, número, ciudad</span>
-                            <input id="input-address" type="text" class="mt-2 hidden w-full px-3 py-2 border rounded-lg" placeholder="Calle, número, ciudad" />
+                            <div class="mb-4 pb-3 border-bottom">
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="flex-grow-1">
+                                        <label class="form-label small fw-medium">Fecha de nacimiento</label>
+                                        <span id="display-birthday" class="text-secondary">No especificada</span>
+                                        <input id="input-birthday" type="date" class="form-control mt-2 d-none">
+                                    </div>
+                                    <button data-field="birthday" class="edit-btn btn btn-primary btn-sm">Editar</button>
+                                </div>
+                            </div>
+
+                            <div class="mb-4">
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="flex-grow-1">
+                                        <label class="form-label small fw-medium">Dirección</label>
+                                        <span id="display-address" class="text-secondary">Calle, número, ciudad</span>
+                                        <input id="input-address" type="text" class="form-control mt-2 d-none" placeholder="Calle, número, ciudad">
+                                    </div>
+                                    <button data-field="address" class="edit-btn btn btn-primary btn-sm">Editar</button>
+                                </div>
+                            </div>
                         </div>
-                        <div><button data-field="address" class="edit-btn px-3 py-1 bg-blue-600 text-white rounded-lg">Editar</button></div>
                     </div>
                 </div>
-            </div>
-        </main>
+            </main>
+        </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="scripts/include.js"></script>
     <script src="scripts/app.js"></script>
 </body>
