--- a/settings.html
+++ b/settings.html
@@ -8,23 +8,29 @@
     <link rel="icon" type="image/png" sizes="16x16" href="Pictures/gear-16.png">
     <!-- fallback .ico at root -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>body{font-family:'Inter',sans-serif}</style>
 </head>
-<body class="bg-slate-100 text-slate-800">
-    <div class="flex h-screen bg-slate-50">
+<body class="bg-light">
+    <div class="d-flex vh-100">
         <!-- Sidebar placeholder: partial will be injected here -->
         <div id="sidebar"></div>
  
-         <main class="flex-1 p-6 lg:p-8 overflow-y-auto">
-             <h2 class="text-3xl font-bold mb-4">Configuración</h2>
-             <div class="bg-white p-6 rounded-lg shadow-md">
-             </div>
-         </main>
-     </div>
- 
+        <div class="flex-grow-1 d-flex flex-column">
+            <!-- Header placeholder -->
+            <div id="header"></div>
+            
+            <main class="flex-grow-1 p-4 p-lg-5 overflow-auto">
+                <h2 class="display-6 fw-bold mb-4">Configuración</h2>
+                <div class="bg-white p-4 rounded shadow">
+                </div>
+            </main>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="scripts/include.js"></script>
     <script src="scripts/app.js"></script>
- </body>
- </html>
+</body>
+</html>
