--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
                     <p class="text-secondary mb-4">Vista rápida</p>
 
                     
-                    <!-- Static course cards -->
-                    <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <!-- Cursos dinámicos se cargarán aquí -->
+                    <div id="cursos-activos-container" class="row row-cols-1 row-cols-md-3 g-4">
                         <!-- Cybersecurity -->
                         <div class="col">
                             <div class="card h-100 shadow-sm">
                                 <div class="position-relative">
-                                    <a href="curso.html">
+                                    <a href="curso.html?id=static-cybersecurity">
                                         <img src="Pictures/Ciberseguridad.jpg" class="card-img-top" alt="Cybersecurity course">
                                     </a>
                                     <div class="dropdown position-absolute top-0 end-0 m-2">
@@ -54,7 +54,7 @@
                                     </div>
                                 </div>
                                 <div class="card-body py-2">
-                                    <h6 class="card-title mb-1"><a href="curso.html" class="text-decoration-none text-dark">Fundamentos de Ciberseguridad</a></h6>
+                                    <h6 class="card-title mb-1"><a href="curso.html?id=static-cybersecurity" class="text-decoration-none text-dark">Fundamentos de Ciberseguridad</a></h6>
                                     <p class="text-muted small mb-2">Profesor: Johnathan Fletcher</p>
                                     <div class="progress" style="height:6px;">
                                         <div class="progress-bar" role="progressbar" style="width:62%" aria-valuenow="62" aria-valuemin="0" aria-valuemax="100"></div>
@@ -170,7 +170,7 @@
                     <div>
                         <h2 class="fs-2 fw-semibold">Otros Cursos</h2>
                         <p class="text-secondary small">Revisa tus opciones</p>
-                        <div class="row row-cols-1 row-cols-md-3 g-4">
+                        <div id="otros-cursos-container" class="row row-cols-1 row-cols-md-3 g-4">
                         <!-- Cybersecurity -->
                         <div class="col">
                             <div class="card h-100 shadow-sm">
@@ -286,38 +286,14 @@
     </div>
 
 
-    <button onclick="emitirDiploma()">Emitir diploma</button>
-    <button onclick="nuevoCurso()">Nuevo curso publicado</button>
-    
     <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
-    <script>
-    const socket = io("http://localhost:3000");
-
-    // Escuchar notificaciones desde el servidor
-    socket.on("notificacion_diploma", (data) => {
-        alert("🎓 Diploma emitido: " + data.mensaje);
-    });
-
-    socket.on("notificacion_admin", (data) => {
-        alert("📚 Nuevo curso: " + data.titulo);
-    });
-
-    // Funciones globales (visibles desde consola o botones)
-    function emitirDiploma() {
-        socket.emit("diploma_emitido", { mensaje: "Diploma disponible para descarga" });
-    }
-
-    function nuevoCurso() {
-        socket.emit("nuevo_curso", { titulo: "Curso de Node.js avanzado" });
-    }
-    </script>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="scripts/include.js"></script>
+    <script src="scripts/api.js"></script>
+    <script src="scripts/auth.js"></script>
+    <script src="scripts/inscripciones.js"></script>
+    <script src="scripts/cursos.js"></script>
+    <script src="scripts/notificaciones-api.js"></script>
     <script src="scripts/app.js"></script>
-
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/notificaciones.js"></script>
 </body>
 </html>
