--- a/login.html
+++ b/login.html
@@ -26,19 +26,56 @@
                             <h1 class="h3 fw-bold">Bienvenido!</h1>
                             <p class="text-secondary">Inicia sesión para continuar.</p>
                         </div>
-                        <form id="login-form" action="index.html" method="get">
-                            <div class="mb-3">
-                                <label for="email" class="form-label">Correo</label>
-                                <input type="email" class="form-control" id="email" name="email" required 
-                                    placeholder="nombre.apellido@inacapmail.com">
+                        <ul class="nav nav-tabs mb-4" id="authTabs" role="tablist">
+                            <li class="nav-item" role="presentation">
+                                <button class="nav-link active" id="login-tab" data-bs-toggle="tab" data-bs-target="#login" type="button" role="tab">Iniciar Sesión</button>
+                            </li>
+                            <li class="nav-item" role="presentation">
+                                <button class="nav-link" id="register-tab" data-bs-toggle="tab" data-bs-target="#register" type="button" role="tab">Registrarse</button>
+                            </li>
+                        </ul>
+                        <div class="tab-content" id="authTabsContent">
+                            <div class="tab-pane fade show active" id="login" role="tabpanel">
+                                <form id="login-form">
+                                    <div class="mb-3">
+                                        <label for="email" class="form-label">Correo</label>
+                                        <input type="email" class="form-control" id="email" name="email" required 
+                                            placeholder="nombre.apellido@inacapmail.com">
+                                    </div>
+                                    <div class="mb-4">
+                                        <label for="password" class="form-label">Contraseña</label>
+                                        <input type="password" class="form-control" id="password" name="password" required 
+                                            placeholder="••••••••">
+                                    </div>
+                                    <button type="submit" class="btn btn-danger w-100 py-2">Iniciar Sesión</button>
+                                </form>
                             </div>
-                            <div class="mb-4">
-                                <label for="password" class="form-label">Contraseña</label>
-                                <input type="password" class="form-control" id="password" name="password" required 
-                                    placeholder="••••••••">
+                            <div class="tab-pane fade" id="register" role="tabpanel">
+                                <form id="register-form">
+                                    <div class="mb-3">
+                                        <label for="reg-nombre" class="form-label">Nombre</label>
+                                        <input type="text" class="form-control" id="reg-nombre" name="nombre" required>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="reg-apellido" class="form-label">Apellido</label>
+                                        <input type="text" class="form-control" id="reg-apellido" name="apellido" required>
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="reg-email" class="form-label">Correo</label>
+                                        <input type="email" class="form-control" id="reg-email" name="email" required 
+                                            placeholder="nombre.apellido@inacapmail.com">
+                                    </div>
+                                    <div class="mb-4">
+                                        <label for="reg-password" class="form-label">Contraseña</label>
+                                        <input type="password" class="form-control" id="reg-password" name="password" required 
+                                            placeholder="••••••••" minlength="6">
+                                        <small class="text-muted">Mínimo 6 caracteres</small>
+                                    </div>
+                                    <button type="submit" class="btn btn-primary w-100 py-2">Registrarse</button>
+                                </form>
                             </div>
-                            <button type="submit" class="btn btn-danger w-100 py-2">Iniciar Sesión</button>
-                        </form>
+                        </div>
+                        <div id="auth-message" class="mt-3"></div>
                     </div>
                 </div>
             </div>
@@ -46,6 +83,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="scripts/auth.js"></script>
     <script src="scripts/app.js"></script>
 </body>
 </html>
