--- a/settings.html
+++ b/settings.html
@@ -42,6 +42,7 @@
     <script src="scripts/include.js"></script>
     <script src="scripts/api.js"></script>
     <script src="scripts/auth.js"></script>
+    <script src="scripts/notificaciones-api.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/admin-media.js"></script>
 </body>
