--- a/curso-vista.html
+++ b/curso-vista.html
@@ -105,6 +105,8 @@
     <script src="scripts/api.js"></script>
     <script src="scripts/auth.js"></script>
     <script src="scripts/inscripciones.js"></script>
+    <script src="scripts/diplomas-api.js"></script>
+    <script src="scripts/notificaciones-api.js"></script>
     <script src="scripts/examenes.js"></script>
     <script src="scripts/curso-vista.js"></script>
     <script src="scripts/app.js"></script>
