--- a/curso.html
+++ b/curso.html
@@ -107,6 +107,7 @@
     <script src="scripts/auth.js"></script>
     <script src="scripts/inscripciones.js"></script>
     <script src="scripts/curso-detalle.js"></script>
+    <script src="scripts/notificaciones-api.js"></script>
     <script src="scripts/app.js"></script>
     <script>
     // Funcionalidad del botón "Empezar ahora"
