--- a/profile.html
+++ b/profile.html
@@ -20,6 +20,7 @@
             
             <main class="flex-grow-1 p-4 p-lg-5 overflow-auto">
                 <h2 class="display-6 fw-bold mb-4">Mi Perfil</h2>
+                <div id="profile-feedback" class="alert d-none" role="alert"></div>
                 <div class="bg-white p-4 rounded shadow">
                     <div class="row g-4">
                         <div class="col-md-4 text-center">
@@ -76,6 +77,10 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="scripts/include.js"></script>
+    <script src="scripts/api.js"></script>
+    <script src="scripts/auth.js"></script>
+    <script src="scripts/notificaciones-api.js"></script>
     <script src="scripts/app.js"></script>
+    <script src="scripts/profile.js"></script>
 </body>
 </html>
