--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 
     <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="scripts/ui.js"></script>
     <script src="scripts/include.js"></script>
     <script src="scripts/api.js"></script>
     <script src="scripts/auth.js"></script>
