--- a/settings.html
+++ b/settings.html
@@ -39,6 +39,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="scripts/ui.js"></script>
     <script src="scripts/include.js"></script>
     <script src="scripts/api.js"></script>
     <script src="scripts/auth.js"></script>
