--- a/index.html
+++ b/index.html
@@ -49,9 +49,23 @@
                                 <p class="text-secondary small mb-0">Retoma las rutas en las que ya estás inscrito.</p>
                             </div>
                         </div>
-                        <div id="cursos-activos-container" class="row row-cols-1 row-cols-md-3 g-4">
+                        <div id="cursos-activos-container" data-role="cursos-activos" class="row row-cols-1 row-cols-md-3 g-4">
                             <div class="col-12 text-center text-muted" data-placeholder="mis-cursos">
                                 Cargando tus cursos...
+                            </div>
+                        </div>
+                    </section>
+
+                    <section class="mb-5">
+                        <div class="d-flex justify-content-between align-items-center mb-3">
+                            <div>
+                                <h2 class="h4 fw-semibold mb-1">Cursos completados</h2>
+                                <p class="text-secondary small mb-0">Repasa contenidos y accede a tus diplomas emitidos.</p>
+                            </div>
+                        </div>
+                        <div id="cursos-completados-container" data-role="cursos-completados" class="row row-cols-1 row-cols-md-3 g-4">
+                            <div class="col-12 text-center text-muted" data-placeholder="cursos-completados">
+                                Aún no has completado ningún curso. Una vez finalices uno, aparecerá aquí.
                             </div>
                         </div>
                     </section>
@@ -63,7 +77,7 @@
                                 <p class="text-secondary small mb-0">Inscríbete en nuevas especializaciones y suma progreso.</p>
                             </div>
                         </div>
-                        <div id="otros-cursos-container" class="row row-cols-1 row-cols-md-3 g-4">
+                        <div id="otros-cursos-container" data-role="cursos-explorar" class="row row-cols-1 row-cols-md-3 g-4">
                             <div class="col-12 text-center text-muted" data-placeholder="otros-cursos">
                                 Buscando cursos disponibles...
                             </div>
